--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   ],
   "author": "Vesa Laakso <laakso.vesa@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "babel-core": "^6.18.2"
+  },
   "devDependencies": {
     "eslint": "^3.9.1",
     "eslint-plugin-flowtype": "^2.25.0",
