--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "Vesa Laakso <laakso.vesa@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.18.2"
+    "babel-core": "^6.18.2",
+    "find-babel-config": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
