--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "flow:check": "flow check",
     "lint": "eslint ."
   },
+  "files": [
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/valscion/babel-plugin-i18n.git"
