--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Statically convert translations to strings",
   "main": "index.js",
   "scripts": {
+    "commitmsg": "validate-commit-msg",
     "test": "jest",
     "test:watch": "npm test -- --watch",
     "flow": "flow status",
@@ -32,7 +33,9 @@
     "eslint": "^3.9.1",
     "eslint-plugin-flowtype": "^2.25.0",
     "eslint-plugin-import": "^2.1.0",
+    "husky": "^0.11.9",
     "jest": "^16.0.2",
-    "semantic-release": "^4.3.5"
+    "semantic-release": "^4.3.5",
+    "validate-commit-msg": "^2.8.2"
   }
 }
