--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "babel-jest": "^16.0.0",
+    "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.9.1",
     "eslint-plugin-flowtype": "^2.25.0",
     "eslint-plugin-import": "^2.1.0",
