--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ after_success:
   - 'curl -Lo travis_after_all.py https://git.io/travis_after_all'
   - python travis_after_all.py
   - export $(cat .to_export_back) &> /dev/null
-  - yarn run semantic-release
+  - ~/.yarn/bin/yarn run semantic-release
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
